--- a/Ejercicio2/Ejercicio2.csproj
+++ b/Ejercicio2/Ejercicio2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{45885609-C59A-41DF-A5D6-86E6A3932A98}</ProjectGuid>
+    <ProjectGuid>{7DCA91D4-0A7F-4462-8D0E-C7CBCC85A9C8}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Ejercicio2.NumeroInvertido</RootNamespace>
-    <AssemblyName>Ejercicio2.NumeroInvertido</AssemblyName>
+    <RootNamespace>Ejercicio2</RootNamespace>
+    <AssemblyName>Ejercicio2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
